RESOLVED FIXED33767
SVG Markers are getting culled incorrectly
https://bugs.webkit.org/show_bug.cgi?id=33767
Summary SVG Markers are getting culled incorrectly
Oliver Hunt
Reported 2010-01-16 18:20:33 PST
SVG Markers are getting culled incorrectly
Attachments
Patch (1.63 KB, patch)
2010-01-16 18:21 PST, Oliver Hunt
zimmermann: review+
Oliver Hunt
Comment 1 2010-01-16 18:21:50 PST
Nikolas Zimmermann
Comment 2 2010-01-16 18:25:27 PST
Comment on attachment 46755 [details] Patch Thanks a lot! r=me.
Oliver Hunt
Comment 3 2010-01-16 18:31:36 PST
Note You need to log in before you can comment on or make changes to this bug.