2010-01-16  Oliver Hunt  <oliver@apple.com>

Reviewed by Nikolas Zimmermann.

        SVG Markers are getting culled incorrectly
        https://bugs.webkit.org/show_bug.cgi?id=33767

        Use applyTransformToPaintInfo to transform the paintInfo, otherwise
        the paint rect is not updated leading to incorrect culling.

        * svg/graphics/SVGResourceMarker.cpp:
        (WebCore::SVGResourceMarker::draw):

Canonical link: https://commits.webkit.org/44774@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53370 268f45cc-cd09-0410-ab3c-d52691b4dbfc